--- a/public/css/home.css
+++ b/public/css/home.css
@@ -104,7 +104,8 @@
 }
 
 .bigger-text {
-  font-size: 1.5rem;
+  font-size: 0.2rem;
+  margin-bottom: 2.2rem;
 }
 
 .main-container {
@@ -191,6 +192,10 @@
   margin-top: 3rem;
 }
 
+.content-mobile {
+  display: none;
+}
+
 /* Mobile Responsive Design */
 @media (max-width: 1000px) {
   body {
@@ -219,8 +224,17 @@
     width: 6rem;
   }
 
+  .main-first {
+    padding: 0;
+  }
+
+  .first-text {
+    padding: 0;
+  }
+
   .main-container {
     width: 90%;
+    padding: 0;
   }
 
   .countdown-timer {
@@ -274,6 +288,11 @@
     text-align: center;
   }
 
+  /* h2 {
+    padding: 0 !important;
+    margin: 0;
+  } */
+
   .content-main-right img,
   .content-main-left img {
     margin-top: -2rem;
@@ -300,4 +319,30 @@
   .no-mobile {
     display: none;
   }
+
+  .main-container p {
+    font-size: 0.8rem;
+  }
+
+  .period {
+    margin: 0;
+    padding: 0;
+    font-size: 1rem;
+  }
+
+  .period span {
+    font-size: 1.6rem;
+  }
+}
+
+.H3 {
+  font-size: 1.5rem;
+}
+H3 {
+  border: 1px solid black;
+}
+
+#register-button {
+  width: 10rem;
+  height: auto;
 }
