--- a/views/homepages/index-results-are-out-period.ejs
+++ b/views/homepages/index-results-are-out-period.ejs
@@ -34,11 +34,11 @@
 
       <div class="content-main">
         <div class="main-first">
-          <img src="img/logo_bulsu.png" class="main-first-logo" alt="BulSU Logo" />
+          <img src="img/logo_bulsu.png" class="main-first-logo no-mobile" alt="BulSU Logo" />
           <div class="first-text">
-            <h2 class="montserrat period">The Results for the <span>BulSU Student Government Elections S.Y. 2025-2026</span> Are Out!</h2>
+            <h2 class="montserrat period">The Results for the <br /><span><%= electionConfig.electionName %></span><br />Are Out!</h2>
           </div>
-          <img src="img/logo_bulsu_ucse.png" class="main-first-logo" alt="BulSU UCSE Logo" />
+          <img src="img/logo_bulsu_ucse.png" class="main-first-logo no-mobile" alt="BulSU UCSE Logo" />
         </div>
         <div class="main-container">
           <p class="bigger-text">
@@ -46,6 +46,17 @@
             <br />
             Alternatively, you can view and verify the results directly by clicking <a href="/rvs-about">here.</a>
           </p>
+          <div class="content-mobile">
+            <div class="content-main-left">
+              <img src="img/logo_bulsu.png" alt="BulSU Logo" class="logo-opacity" /> <br />
+              <p class="montserrat" id="be-heard">Be Heard! Your Vote is Your Power!</p>
+            </div>
+
+            <div class="content-main-right">
+              <img src="img/logo_bulsu_ucse.png" alt="BulSU UCSE Logo" class="logo-opacity" /><br />
+              <p class="montserrat" id="vote-now">Vote Now for the Student Government Elections!</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
