--- a/views/homepages/index-vote-checking-period.ejs
+++ b/views/homepages/index-vote-checking-period.ejs
@@ -33,11 +33,14 @@
 
       <div class="content-main">
         <div class="main-first">
-          <img src="img/logo_bulsu.png" class="main-first-logo" alt="BulSU Logo" />
+          <img src="img/logo_bulsu.png" class="main-first-logo no-mobile" alt="BulSU Logo" />
           <div class="first-text">
-            <h2 class="montserrat period">The <span>BulSU Student Government Elections S.Y. 2025-2026</span> Vote Checking Period Is Ongoing</h2>
+            <h2 class="montserrat period">
+              <span><%= electionConfig.electionName %></span><br />
+              Vote Checking Period Is Ongoing
+            </h2>
           </div>
-          <img src="img/logo_bulsu_ucse.png" class="main-first-logo" alt="BulSU UCSE Logo" />
+          <img src="img/logo_bulsu_ucse.png" class="main-first-logo no-mobile" alt="BulSU UCSE Logo" />
         </div>
         <div class="main-container">
           <p class="bigger-text">
@@ -47,6 +50,17 @@
             <br />
             Official results will be announced soon. Stay tuned!
           </p>
+          <div class="content-mobile">
+            <div class="content-main-left">
+              <img src="img/logo_bulsu.png" alt="BulSU Logo" class="logo-opacity" /> <br />
+              <p class="montserrat" id="be-heard">Be Heard! Your Vote is Your Power!</p>
+            </div>
+
+            <div class="content-main-right">
+              <img src="img/logo_bulsu_ucse.png" alt="BulSU UCSE Logo" class="logo-opacity" /><br />
+              <p class="montserrat" id="vote-now">Vote Now for the Student Government Elections!</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
