--- a/public/voter/css/verify.css
+++ b/public/voter/css/verify.css
@@ -31,7 +31,7 @@
 .column {
   border-radius: 1em;
   color: black;
-  background-color: #544721;
+  background-color: #23a85f;
   border: 2px solid black;
   width: 40%;
   padding: 2rem 3rem;
