--- a/views/voter/verify.ejs
+++ b/views/voter/verify.ejs
@@ -35,7 +35,7 @@
             <div class="dropdown-menu">
               <p>
                 Logged in as <br />
-                <%= email %>
+                <strong> <%= email %> </strong>
               </p>
               <hr class="dropdown-line" />
               <a href="/voter/logout">Log Out</a>
