--- a/public/voter/css/vote.css
+++ b/public/voter/css/vote.css
@@ -302,6 +302,72 @@
   justify-content: center;
 }
 
+.content-mobile {
+  display: none;
+}
+
+/* Mobile Responsive */
+
+@media (max-width: 1000px) {
+  /* Make the ballot container wider and center it */
+  .ballot {
+    width: 90vw !important;
+    margin: 0 auto !important;
+  }
+
+  /* Stack ballot choices vertically and adjust spacing */
+  .ballot-choices {
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+  }
+
+  /* Adjust label container width for better stacking */
+  .label-container {
+    flex-basis: 90%;
+  }
+
+  /* Reduce padding and font sizes for ballot tiles */
+  .ballot-tile {
+    margin: 0px 2rem;
+    padding: 1rem;
+    font-size: 0.9rem;
+  }
+
+  /* Scale down images within ballot choices */
+  .ballot-choices img {
+    width: 4rem;
+    height: 4rem;
+  }
+
+  .instructions {
+    font-size: 0.6rem !important;
+  }
+
+  .main-first {
+    flex-direction: column;
+  }
+
+  .main-first img {
+    width: 4rem;
+    height: 4rem;
+  }
+  .logos {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    column-gap: 20%;
+  }
+
+  .content-mobile {
+    display: flex;
+    align-items: start;
+  }
+  .no-mobile {
+    display: none;
+  }
+}
+
 /* Animation for Abstain */
 
 .checkbox-wrapper-10 .tgl {
