--- a/views/about.ejs
+++ b/views/about.ejs
@@ -31,13 +31,24 @@
       </div>
 
       <div class="content-main">
+        <div class="content-mobile">
+          <div class="content-main-left">
+            <img src="img/logo_bulsu.png" alt="BulSU Logo" class="logo-opacity" /> <br />
+            <p class="montserrat" id="be-heard">Be Heard! Your Vote is Your Power!</p>
+          </div>
+
+          <div class="content-main-right">
+            <img src="img/logo_bulsu_ucse.png" alt="BulSU UCSE Logo" class="logo-opacity" /><br />
+            <p class="montserrat" id="vote-now">Vote Now for the Student Government Elections!</p>
+          </div>
+        </div>
         <div class="main-first">
-          <img src="img/logo_bulsu.png" class="main-first-logo" alt="BulSU Logo" />
+          <img src="img/logo_bulsu.png" class="main-first-logo no-mobile" alt="BulSU Logo" />
           <div class="first-text">
             <h2 class="montserrat h1-big about">About Us</h2>
-            <p class="montserrat light">Get to know more about the TANIKALA Voting System.</p>
+            <p class="montserrat light get-to-know">Get to know more about the TANIKALA Voting System.</p>
           </div>
-          <img src="img/logo_bulsu_ucse.png" class="main-first-logo" alt="BulSU UCSE Logo" />
+          <img src="img/logo_bulsu_ucse.png" class="main-first-logo no-mobile" alt="BulSU UCSE Logo" />
         </div>
 
         <div class="main-container">
@@ -74,8 +85,7 @@
             <h2 class="montserrat" id="bulsu">BulSU and its Student Government Elections</h2>
             <br />
             <p>
-              Bulacan State University is a premier institution that values quality education and the growth of its students. Every year, the university holds student government elections managed by the University Commission on Student Elections (UCSE). These elections give students the chance to
-              vote for their leaders in the Supreme Student Government (SSG) and Local Student Government (LSG), ensuring every student’s voice is heard. <br />
+              Bulacan State University is a premier institution that values quality education and the growth of its students. Every year, the university holds student government elections managed by the University Commission on Student Elections (UCSE). These elections give students the chance to vote for their leaders in the Supreme Student Government (SSG) and Local Student Government (LSG), ensuring every student’s voice is heard. <br />
               <br />
               The SSG represents all students across the university, while the LSG focuses on the needs of students in specific colleges. This setup allows student concerns to be addressed effectively. <br />
               <br />
@@ -98,9 +108,8 @@
             <h3 class="light-yellow">What is Blockchain?</h3>
             <br />
             <p>
-              Blockchain is a secure and transparent digital record that stores information in a way that cannot be changed or deleted. Unlike traditional systems that rely on a central authority, blockchain uses multiple computers working together to verify and store data, ensuring accuracy and
-              trust. The trust comes from the fact that no single individual or organization controls the data. Instead, it is distributed across a network of computers, where each one verifies the information to ensure consistency, thereby storing it accurately. If any discrepancies are detected,
-              the operation is rejected by the network, ensuring the integrity of the system.
+              Blockchain is a secure and transparent digital record that stores information in a way that cannot be changed or deleted. Unlike traditional systems that rely on a central authority, blockchain uses multiple computers working together to verify and store data, ensuring accuracy and trust. The trust comes from the fact that no single individual or organization controls the data. Instead, it is distributed across a network of computers, where each one verifies the information to
+              ensure consistency, thereby storing it accurately. If any discrepancies are detected, the operation is rejected by the network, ensuring the integrity of the system.
               <br />
               <br />
               In the context of voting systems, blockchain ensures that:
@@ -189,8 +198,9 @@
                 <img src="img/roxas.png" alt="Phamela R. Roxas" /> <br />
                 <br />
                 <h4>Phamela R. Roxas</h4>
+
                 <br />
-                <hr />
+                <span class="pham"><hr /></span>
                 <br />
                 <p class="role">Front-end Designer</p>
               </div>
@@ -199,13 +209,11 @@
             <h3 class="group">Fourmula 1</h3>
             <br />
             <p>
-              The TANIKALA Voting System was developed by Fourmula 1, a group of Bachelor of Science in Mathematics with Specialization in Computer Science students at Bulacan State University. This system originated as their thesis project during their fourth year. The main objective was to develop
-              a blockchain-based voting system tailored specifically for the student government elections at the university. <br /><br />The team, Fourmula 1, consists of four members: Zarina B. Dungo, Liah Francheska C. Baculi, Aina Jane C. Franco, and Phamela R. Roxas. Ms. Roxas and Ms. Franco
-              focused on front-end design and front-end development, respectively, while Ms. Baculi contributed to both areas. Ms. Dungo, the team leader, served as the project manager and contributed to front-end design. She played a key role as a full-stack developer, handling both the front-end
-              and back-end. She was supported by external collaborator Yvan Lowell T. Aquino, who contributed to full-stack development, particularly in back-end and blockchain development. This collaboration significantly enhanced the system’s overall functionality. <br /><br />Each member of
-              Fourmula 1 took on specific responsibilities in the design, development, and implementation of the voting system. Their collective effort, time, and dedication resulted in an efficient platform that addresses the unique needs of Bulacan State University’s student government elections.
-              <br /><br />The team believes that the TANIKALA Voting System is an innovative solution designed to address the critical issues of security, privacy, and transparency in elections. While it currently serves as a tailored platform for student government elections, the idea of expanding
-              the system for use in other electoral processes remains a potential future direction. Fourmula 1 is proud of their work and is committed to providing a secure, reliable, and transparent voting system for Bulacan State University and potentially for other elections in the future.
+              The TANIKALA Voting System was developed by Fourmula 1, a group of Bachelor of Science in Mathematics with Specialization in Computer Science students at Bulacan State University. This system originated as their thesis project during their fourth year. The main objective was to develop a blockchain-based voting system tailored specifically for the student government elections at the university. <br /><br />The team, Fourmula 1, consists of four members: Zarina B. Dungo, Liah
+              Francheska C. Baculi, Aina Jane C. Franco, and Phamela R. Roxas. Ms. Roxas and Ms. Franco focused on front-end design and front-end development, respectively, while Ms. Baculi contributed to both areas. Ms. Dungo, the team leader, served as the project manager and contributed to front-end design. She played a key role as a full-stack developer, handling both the front-end and back-end. She was supported by external collaborator Yvan Lowell T. Aquino, who contributed to full-stack
+              development, particularly in back-end and blockchain development. This collaboration significantly enhanced the system’s overall functionality. <br /><br />Each member of Fourmula 1 took on specific responsibilities in the design, development, and implementation of the voting system. Their collective effort, time, and dedication resulted in an efficient platform that addresses the unique needs of Bulacan State University’s student government elections. <br /><br />The team believes
+              that the TANIKALA Voting System is an innovative solution designed to address the critical issues of security, privacy, and transparency in elections. While it currently serves as a tailored platform for student government elections, the idea of expanding the system for use in other electoral processes remains a potential future direction. Fourmula 1 is proud of their work and is committed to providing a secure, reliable, and transparent voting system for Bulacan State University
+              and potentially for other elections in the future.
             </p>
             <br />
             <br />
