--- a/views/admin/admin-login.ejs
+++ b/views/admin/admin-login.ejs
@@ -45,7 +45,7 @@
                 ></path>
               </svg>
               <!-- Changed field to use username -->
-              <input autocomplete="off" id="logusername" placeholder="Type your email here..." class="input-field" name="username" type="text" required />
+              <input autocomplete="off" id="logusername" placeholder="Type your email here..." class="input-field" name="email" type="text" required />
             </div>
             <div class="field">
               <svg class="input-icon" viewBox="0 0 500 500" xmlns="http://www.w3.org/2000/svg">
