--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -33,16 +33,16 @@
 
       <div class="content-main">
         <div class="main-first">
-          <img src="img/logo_bulsu.png" class="main-first-logo" alt="BulSU Logo" />
+          <img src="img/logo_bulsu.png" class="main-first-logo no-mobile" alt="BulSU Logo" />
           <div class="first-text">
             <h2 class="montserrat h1-big about">Contact Us</h2>
-            <p class="montserrat light">If you have any questions or feedback, feel free to reach us!</p>
+            <p class="montserrat light">If you have any questions or feedback, <br />feel free to reach us!</p>
           </div>
-          <img src="img/logo_bulsu_ucse.png" class="main-first-logo" alt="BulSU UCSE Logo" />
+          <img src="img/logo_bulsu_ucse.png" class="main-first-logo no-mobile" alt="BulSU UCSE Logo" />
         </div>
         <div class="main-second">
           <div class="second-left box-shadow">
-            <form>
+            <form id="contact-form">
               <h2 class="red">Contact Form</h2>
               <br />
               <i class="fa fa-user-circle icon"></i>
