--- a/public/css/otp-verification.css
+++ b/public/css/otp-verification.css
@@ -51,3 +51,52 @@ button:hover {
   font-weight: bold;
   color: white;
 }
+
+.button {
+  padding: 2% 3%;
+  font-size: 0.9rem;
+  margin: 0.5rem auto;
+}
+
+.button {
+  background-color: #6e1311;
+  border-radius: 0.5rem;
+  width: auto;
+  padding: 3% 4%;
+  color: white;
+  font-weight: bold;
+  text-align: center;
+  line-height: normal;
+  height: auto;
+  cursor: pointer;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px, rgba(0, 0, 0, 0.06) 0px 2px 4px;
+}
+
+hr {
+  width: 100%;
+}
+
+@media (max-width: 768px) {
+  .card {
+    width: 90vw; /* Increase card width for smaller screens */
+    padding: 1.5rem; /* Reduce padding */
+  }
+
+  i {
+    font-size: 3rem; /* Scale down the icon size */
+  }
+
+  .otp-field {
+    width: 8rem; /* Adjust the input width */
+  }
+
+  .button {
+    padding: 2% 4%; /* Adjust button padding */
+    font-size: 0.8rem; /* Slightly smaller font size */
+  }
+
+  #resend-btn {
+    padding: 0.3rem;
+    margin-top: 0.3rem;
+  }
+}
