--- a/views/voter/register.ejs
+++ b/views/voter/register.ejs
@@ -26,11 +26,11 @@
 
     <div class="content">
       <div class="main-first">
-        <img src="img/logo_bulsu.png" class="main-first-logo" alt="BulSU Logo" />
+        <img src="img/logo_bulsu.png" class="main-first-logo no-mobile" alt="BulSU Logo" />
         <div class="first-text">
           <h2 class="title"><%= electionConfig.electionName %></h2>
         </div>
-        <img src="img/logo_bulsu_ucse.png" class="main-first-logo" alt="BulSU UCSE Logo" />
+        <img src="img/logo_bulsu_ucse.png" class="main-first-logo no-mobile" alt="BulSU UCSE Logo" />
       </div>
       <div class="main-second box-shadow">
         <form id="form-registration" action="/register" method="POST">
@@ -104,6 +104,17 @@
             <input type="button" id="submitBtn" value="SUBMIT" />
           </div>
         </form>
+      </div>
+      <div class="content-mobile">
+        <div class="content-main-left">
+          <img src="img/logo_bulsu.png" alt="BulSU Logo" class="logo-opacity" /> <br />
+          <p class="montserrat" id="be-heard">Be Heard! Your Vote is Your Power!</p>
+        </div>
+
+        <div class="content-main-right">
+          <img src="img/logo_bulsu_ucse.png" alt="BulSU UCSE Logo" class="logo-opacity" /><br />
+          <p class="montserrat" id="vote-now">Vote Now for the Student Government Elections!</p>
+        </div>
       </div>
     </div>
 
